# pentarust

./: .gitignore  Cargo.toml  README.md
java/: build.xml
java/src/autoplay/: Autoplay.java
java/src/boardgame/: Client.java  ServerGUI.java
java/src/student_player/: Baseline.java  BaselinePlayer.java  PentaRust.java  StudentPlayer.java  student_player_Baseline.h  student_player_PentaRust.h
opening-table/: Cargo.toml
opening-table/src/: main.rs  node.rs
pentarust/: Cargo.toml
pentarust/benches/: alpha_beta.rs
pentarust/src/: lib.rs
pentarust/src/alpha_beta/: eval.rs  mod.rs  search.rs  transposition_table.rs
pentarust/src/game/: action.rs  board.rs  board_symmetries.rs  mod.rs  outcome.rs  swap.rs
pentarust/tests/: mcts.rs
scripts/: autoplay.sh  cloc.sh  make_baseline.sh  student_player.sh  submission.sh
src/: board.rs  lib.rs  mcts.rs  win_stats.rs
src/game/: action.rs  board.rs  mod.rs  player.rs
src/mcts/: mod.rs  tree_node.rs  win_stats.rs
tests/: mcts.rs
